--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <h1 id="miller-hall">Miller Hall</h1>
-<h2 id="projects">Projects</h2>
 <ul>
-<li><a href="etch_a_sketch/index.html">etch_a_sketch</a></li>
+<li>I’m a developer at AWS</li>
+<li>I currently live in Herndon, VA</li>
+</ul>
+<h2 id="work">Work</h2>
+<p>I’ve worked on the following projects:</p>
+<ul>
+<li>An internal testing service for AWS Region launches</li>
+<li>AWS Ground Station (launched at Re:Invent 2018)</li>
 </ul>
