Add social links
- Education experience
- Social media (linkedin/ twitter)

--- a/index.html
+++ b/index.html
@@ -9,3 +9,14 @@
 <li>An internal testing service for AWS Region launches</li>
 <li>AWS Ground Station (launched at Re:Invent 2018)</li>
 </ul>
+<h2 id="education">Education</h2>
+<ul>
+<li>Graduated from Clemson University in December 2016</li>
+<li>Majored in Computer Engineering</li>
+</ul>
+<h2 id="social">Social</h2>
+<p>Find me on social media:</p>
+<ul>
+<li><a href="https://www.linkedin.com/in/arlindohall/">LinkedIn</a></li>
+<li><a href="https://twitter.com/arlindohall">Twitter</a></li>
+</ul>
