Add fonts and styling
- Style with blue instead of black text
- Use CMU computer modern font clone
- Add JS to fetch sub-pages
- Add css debugging (red outline)

--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
-<h1 id="miller-hall">Miller Hall</h1>
-<ul>
-<li>I’m a developer at AWS</li>
-<li>I currently live in Herndon, VA</li>
-</ul>
-<h2 id="work">Work</h2>
-<p>I’ve worked on the following projects:</p>
-<ul>
-<li>An internal testing service for AWS Region launches</li>
-<li>AWS Ground Station (launched at Re:Invent 2018)</li>
-</ul>
-<h2 id="education">Education</h2>
-<ul>
-<li>Graduated from Clemson University in December 2016</li>
-<li>Majored in Computer Engineering</li>
-</ul>
-<h2 id="social">Social</h2>
-<p>Find me on social media:</p>
-<ul>
-<li><a href="https://www.linkedin.com/in/arlindohall/">LinkedIn</a></li>
-<li><a href="https://twitter.com/arlindohall">Twitter</a></li>
-</ul>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css"/>
+    </head>
+    <body>
+        <div class="container">
+            <div class="header"></div>
+            <div class="main">
+                <h1 id="title">Miller Hall</h1>
+                <ul>
+                    <li>I'm a developer at AWS</li>
+                    <li>I currently live in Herndon, VA</li>
+                </ul>
+                <h2 id="work">Work</h2>
+                <p>I've worked on the following projects:</p>
+                <ul>
+                    <li>An internal testing service for AWS Region launches</li>
+                    <li>AWS Ground Station (launched at Re:Invent 2018)</li>
+                </ul>
+                <h2 id="education">Education</h2>
+                <ul>
+                    <li>Graduated from Clemson University in December 2016</li>
+                    <li>Majored in Computer Engineering</li>
+                </ul>
+                <h2 id="social">Social</h2>
+                <p>Find me on social media:</p>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/arlindohall/">LinkedIn</a></li>
+                    <li><a href="https://twitter.com/arlindohall">Twitter</a></li>
+                </ul>
+            </div>
+            <div class="footer"></div>
+        </div>
+    </body>
+    <script src="base.js"></script>
+</html>
