--- a/index.html
+++ b/index.html
@@ -1,36 +1,17 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="/styles.css"/>
+        <script src="/assets/commonmark.min.js"></script>
     </head>
     <body>
         <div class="container">
             <div class="header"></div>
-            <div class="main">
-                <h1 id="title">Miller Hall</h1>
-                <ul>
-                    <li>I'm a developer at AWS</li>
-                    <li>I currently live in Herndon, VA</li>
-                </ul>
-                <h2 id="work">Work</h2>
-                <p>I've worked on the following projects:</p>
-                <ul>
-                    <li>An internal testing service for AWS Region launches</li>
-                    <li>AWS Ground Station (launched at Re:Invent 2018)</li>
-                </ul>
-                <h2 id="education">Education</h2>
-                <ul>
-                    <li>Graduated from Clemson University in December 2016</li>
-                    <li>Majored in Computer Engineering</li>
-                </ul>
-                <h2 id="social">Social</h2>
-                <p>Find me on social media:</p>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/arlindohall/">LinkedIn</a></li>
-                    <li><a href="https://twitter.com/arlindohall">Twitter</a></li>
-                </ul>
-            </div>
+            <div id="main" class="main"></div>
             <div class="footer"></div>
         </div>
     </body>
-    <script src="base.js"></script>
+    <script src="/base.js"></script>
+    <script>
+        let md = new MarkdownContent('main', '/content/index.md');
+    </script>
 </html>
