--- a/posts.html
+++ b/posts.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/styles.css"></link>
+        <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
         <script src="/assets/commonmark.min.js"></script>
     </head>
     <body>
