--- a/shared-footer.html
+++ b/shared-footer.html
@@ -1,2 +1,2 @@
-<span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io">GitHub</a></span>
+<span>Page source on <a id="footer-source-link" href="https://github.com/arlindohall/arlindohall.github.io">GitHub</a></span>
 <!-- <link rel="stylesheet" href="/debug.css"></link> -->
