--- a/posts.html
+++ b/posts.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="/styles.css"></link>
         <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
+        <title>Posts: Miller Hall</title>
         <script src="/assets/commonmark.min.js"></script>
     </head>
     <body>
