Minor updates to style
- Lowercase and serif buttons
- Gradient in header as well as footer

--- a/shared-header.html
+++ b/shared-header.html
@@ -1,6 +1,6 @@
 
-<span class="header-button"><a href="/">Home</a></span>
+<span class="header-button"><a href="/">home</a></span>
 <span class="header-button-space"></span>
-<span class="header-button"><a href="/posts.html">Posts</a></span>
+<span class="header-button"><a href="/posts.html">posts</a></span>
 
-<span class="header-button header-button-float-right"><a href="https://twitter.com/arlindohall">Twitter</a></span>
+<span class="header-button header-button-float-right"><a href="https://twitter.com/arlindohall">twitter</a></span>
