--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <link rel="stylesheet" href="/styles.css"></link>
         <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
         <title>Miller Hall</title>
-        <script src="/assets/commonmark.min.js"></script>
+        <script src="/assets/markdown-it.min.js"></script>
+        <script src="/assets/markdown-it-footnote.min.js"></script>
     </head>
     <body>
         <div class="container">
