Add anchor links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Miller Hall</title>
         <script src="/assets/markdown-it.min.js"></script>
         <script src="/assets/markdown-it-footnote.min.js"></script>
+        <script src="/assets/markdown-it-anchor.umd.js"></script>
     </head>
     <body>
         <div class="container">
