Wrap lines for legibility in index.html

--- a/index.html
+++ b/index.html
@@ -1,102 +1,114 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="/styles.css"></link>
-        <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-        <title>Miller Hall</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="header">
-                <span class="header-button"><a href="/">home</a></span>
-                <span class="header-button-space"></span>
-                <span class="header-button"><a href="/posts.html">posts</a></span>
+<head>
+  <link rel="stylesheet" href="/styles.css"></link>
+  <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
+  <title>Miller Hall</title>
+</head>
+  <body>
+    <div class="container">
+      <div class="header">
+      <span class="header-button"><a href="/">home</a></span>
+      <span class="header-button-space"></span>
+      <span class="header-button"><a href="/posts.html">posts</a></span>
 
-                <span class="header-button header-button-float-right"><a href="https://twitter.com/arlindohall">twitter</a></span>
-            </div>
+      <span class="header-button header-button-float-right">
+        <a href="https://twitter.com/arlindohall">twitter</a>
+      </span>
+      </div>
 
-            <div id="main" class="main">
-                <h1>
-                    Miller Hall
-                </h1>
+      <div id="main" class="main">
+      <h1>
+        Miller Hall
+      </h1>
 
-                <ul>
-                    <li>
-                        I am a software developer and tinkerer based in Herndon, Virginia
-                    </li>
-                    <li>
-                        Software is my job and my hobby, but I don't really have any projects I've shared (I'm working on that)
-                    </li>
-                    <li>
-                        On the weekends I like to read (check out my <a href="https://www.goodreads.com/user/show/52490059-miller-hall">goodreads</a>) and take walks with my wife and my dog
-                    </li>
-                    <li>
-                        I'm originally from North Carolina, and I graduated from Clemson in 2016. I love all things Carolinas
-                    </li>
-                    <li>
-                        I'm not super talented—my greatest skill is self-deprecating humor
-                    </li>
-                </ul>
+      <ul>
+        <li>
+          I am a software developer and tinkerer based in Herndon, Virginia
+        </li>
+        <li>
+          Software is my job and my hobby, but I don't really have any
+          projects I've shared (I'm working on that)
+        </li>
+        <li>
+          On the weekends I like to read (check out my <a href="https://www.goodreads.com/user/show/52490059-miller-hall">
+          goodreads</a>) and take walks with my wife and my dog
+        </li>
+        <li>
+          I'm originally from North Carolina, and I graduated from Clemson in
+          2016. I love all things Carolinas
+        </li>
+        <li>
+          I'm not super talented---my greatest skill is self-deprecating humor
+        </li>
+      </ul>
 
-                <h2>
-                    Work
-                </h2>
-                <ul>
-                    <li>
-                        I have been an SDE at AWS in Arlington, Virginia since 2017
-                    </li>
-                    <li>
-                        I spent three years on a team focused on software quality during the region build process
-                    </li>
-                    <li>
-                        I now work on building edge solutions custom-built to customer needs
-                    </li>
-                </ul>
+      <h2>
+        Work
+      </h2>
+      <ul>
+        <li>
+          I have been an SDE at AWS in Arlington, Virginia since 2017
+        </li>
+        <li>
+          I spent three years on a team focused on software quality during
+          the region build process
+        </li>
+        <li>
+          I now work on building edge solutions custom-built to customer
+          needs
+        </li>
+      </ul>
 
-                <h2>
-                    Projects
-                </h2>
+      <h2>
+        Projects
+      </h2>
 
-                <p>
-                    I've given up on most of these, as I prefer the peak of the dunning-kruger effect to the valleys.
-                </p>
+      <p>
+        I've given up on most of these, as I prefer the peak of the
+        dunning-kruger effect to the valleys.
+      </p>
 
-                <img class="image-center"
-                    src="/assets/dunning-kruger.jpg"
-                    title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
-                    alt="Dunning-kruger effect graph, from wikimedia commons">
-                </img>
+      <img class="image-center"
+      src="/assets/dunning-kruger.jpg"
+      title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
+      alt="Dunning-kruger effect graph, from wikimedia commons">
+      </img>
 
-                <table>
-                    <tr>
-                        <td>Project</td>
-                        <td>Description</td>
-                        <td>Link</td>
-                    </tr>
-                    <tr>
-                        <td><pre>rlox</pre></td>
-                        <td>Work through the book <a href="https://craftinginterpreters.com">Crafting Interpreters</a> in Rust</td>
-                        <td><a href="https://github.com/arlindohall/rlox">GitHub</a></td>
-                    </tr>
-                    <tr>
-                        <td>This website</td>
-                        <td>Host updates and various static content</td>
-                        <td>Link</td>
-                    </tr>
-                    <tr>
-                        <td><pre>sicp</pre></td>
-                        <td>Description</td>
-                        <td><a href="https://github.com/arlindohall/sicp">GitHub</a></td>
-                    </tr>
-                </table>
+      <table>
+      <tr>
+        <td>Project</td>
+        <td>Description</td>
+        <td>Link</td>
+      </tr>
+      <tr>
+        <td><pre>rlox</pre></td>
+        <td>
+          Work through the book
+        <a href="https://craftinginterpreters.com">Crafting Interpreters</a>
+          in Rust
+        </td>
+        <td><a href="https://github.com/arlindohall/rlox">GitHub</a></td>
+      </tr>
+      <tr>
+        <td>This website</td>
+        <td>Host updates and various static content</td>
+        <td>Link</td>
+      </tr>
+      <tr>
+        <td><pre>sicp</pre></td>
+        <td>Description</td>
+        <td><a href="https://github.com/arlindohall/sicp">GitHub</a></td>
+      </tr>
+      </table>
 
-                <img class="index-personal-logo" src="/assets/logo.svg"></img>
+      <img class="index-personal-logo" src="/assets/logo.svg"></img>
 
-            </div>
+      </div>
 
-            <div class="footer">
-                <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io">GitHub</a></span>
-            </div>
-        </div>
-    </body>
-    <!-- <link rel="stylesheet" href="/debug.css"></link> -->
+      <div class="footer">
+      <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
+      </div>
+    </div>
+  </body>
+<!-- <link rel="stylesheet" href="/debug.css"></link> -->
 </html>
