Move post content to pure html

--- a/posts.html
+++ b/posts.html
@@ -1,17 +1,60 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="/styles.css"></link>
-        <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-        <title>Posts: Miller Hall</title>
-        <script src="/assets/markdown-it.min.js"></script>
-        <script src="/assets/markdown-it-footnote.min.js"></script>
-        <script src="/assets/markdown-it-anchor.umd.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="header"></div>
-            <div id="main" class="main"></div>
-            <div class="footer"></div>
-        </div>
-    </body>
+  <head>
+    <link rel="stylesheet" href="/styles.css"></link>
+    <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
+    <title>Posts: Miller Hall</title>
+    <script src="/assets/markdown-it.min.js"></script>
+    <script src="/assets/markdown-it-footnote.min.js"></script>
+    <script src="/assets/markdown-it-anchor.umd.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+      <span class="header-button"><a href="/">home</a></span>
+      <span class="header-button-space"></span>
+      <span class="header-button"><a href="/posts.html">posts</a></span>
+
+      <span class="header-button header-button-float-right">
+        <a href="https://twitter.com/arlindohall">twitter</a>
+      </span>
+      </div>
+      <div id="main" class="main">
+        <h1>Posts</h1>
+
+        <p>
+          This is a manually-updated list of posts I've written.
+          Some are marked as "Work in Progress" because I don't
+          feel like they're ready to see the light of day/to be
+          shared. However, I'm trying to learn in public, and I
+          think it's more important to share them than to have them
+          in perfect shape. Putting the "Work in Progress" message
+          at the top is my way of forgiving myself for their
+          imperfections until I'm more comfortable with the learn
+          in public style of doing things.
+        </p>
+
+        <h2>Post List</h2>
+
+        <ul>
+          <li>
+            <a href="/posts/random-strings-in-bash.html">
+              Generating random data in fish(/bash/sh/zsh)
+            </a>
+          </li>
+          <li>
+            <a href="/posts/website.html">
+              How and why I built this website...
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+      <img class="index-personal-logo" src="/assets/logo.svg"></img>
+
+      <div class="footer">
+        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
+      </div>
+    </div>
+  </body>
 </html>
