Update posts pointer

--- a/posts.html
+++ b/posts.html
@@ -53,7 +53,7 @@
       <img class="index-personal-logo" src="/assets/logo.svg"></img>
 
       <div class="footer">
-        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
+        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">GitHub</a></span>
       </div>
     </div>
   </body>
