--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-<head>
-  <link rel="stylesheet" href="/styles.css"></link>
-  <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-  <title>Miller Hall</title>
-</head>
+  <head>
+    <link rel="stylesheet" href="/styles.css"></link>
+    <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
+    <title>Miller Hall</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
   <body>
     <div class="container">
       <div class="header">
