--- a/posts.html
+++ b/posts.html
@@ -3,9 +3,7 @@
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
     <title>Posts: Miller Hall</title>
-    <script src="/assets/markdown-it.min.js"></script>
-    <script src="/assets/markdown-it-footnote.min.js"></script>
-    <script src="/assets/markdown-it-anchor.umd.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="container">
