Use em dash now that fonts are not broken

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           2016. I love all things Carolinas
         </li>
         <li>
-          I'm not super talented---my greatest skill is self-deprecating humor
+          I'm not super talented—my greatest skill is self-deprecating humor
         </li>
       </ul>
 
