Use actual elipses instead of three dots, now that fonts are fixed

--- a/posts.html
+++ b/posts.html
@@ -41,7 +41,7 @@
           </li>
           <li>
             <a href="/posts/website.html">
-              How and why I built this website...
+              How and why I built this website…
             </a>
           </li>
         </ul>
