Link to my HEY World page

--- a/posts.html
+++ b/posts.html
@@ -46,6 +46,12 @@
           </li>
         </ul>
 
+        <h2>Other Content</h2>
+
+        <p>
+          I have some blog posts at <a href="https://world.hey.com/hall">world.hey.com</a>
+        </p>
+
       </div>
 
       <img class="index-personal-logo" src="/assets/logo.svg"></img>
