--- a/index.html
+++ b/index.html
@@ -22,26 +22,14 @@
         Miller Hall
       </h1>
 
-      <ul>
-        <li>
-          I am a software developer and tinkerer based in Herndon, Virginia
-        </li>
-        <li>
-          Software is my job and my hobby, but I don't really have any
-          projects I've shared (I'm working on that)
-        </li>
-        <li>
-          On the weekends I like to read (check out my <a href="https://www.goodreads.com/user/show/52490059-miller-hall">
-          goodreads</a>) and take walks with my wife and my dog
-        </li>
-        <li>
-          I'm originally from North Carolina, and I graduated from Clemson in
-          2016. I love all things Carolinas
-        </li>
-        <li>
-          I'm not super talented—my greatest skill is self-deprecating humor
-        </li>
-      </ul>
+      <p>
+          I am a software developer and tinkerer based in Herndon, Virginia.
+          On the weekends I like to read (check out my <a
+          href="https://www.goodreads.com/user/show/52490059-miller-hall">
+          goodreads</a>) and take walks with my wife and my dog. I'm
+          originally from North Carolina, and I graduated from Clemson in
+          2016. I love all things Carolinas.
+      </p>
 
       <h2>
         Work
@@ -75,32 +63,32 @@
       alt="Dunning-kruger effect graph, from wikimedia commons">
       </img>
 
-      <table>
-      <tr>
-        <td>Project</td>
-        <td>Description</td>
-        <td>Link</td>
-      </tr>
-      <tr>
-        <td><pre>rlox</pre></td>
-        <td>
-          Work through the book
-        <a href="https://craftinginterpreters.com">Crafting Interpreters</a>
-          in Rust
-        </td>
-        <td><a href="https://github.com/arlindohall/rlox">GitHub</a></td>
-      </tr>
-      <tr>
-        <td>This website</td>
-        <td>Host updates and various static content</td>
-        <td>Link</td>
-      </tr>
-      <tr>
-        <td><pre>sicp</pre></td>
-        <td>Description</td>
-        <td><a href="https://github.com/arlindohall/sicp">GitHub</a></td>
-      </tr>
-      </table>
+      <ul>
+          <li>
+            <p>
+            <a href="https://github.com/arlindohall/rlox">
+                <code>rlox</code>
+            </a>: Work through the book
+            <a href="https://craftinginterpreters.com">Crafting Interpreters</a>
+            in Rust
+            </p>
+          </li>
+          <li>
+            <p>
+            <a href="/posts/website.html">This website</a>: Host updates and various static content
+            </p>
+          </li>
+          <li>
+            <p>
+            <a href="https://github.com/arlindohall/sicp">
+              <code>sicp</code>
+            </a>: Working through the examples in
+            <a href="https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html">
+                Structure and Interpretation of Computer Programs
+            </a>
+            </p>
+          </li>
+      </ul>
 
       </div>
 
