Updated index page content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
       <p>
           I am a software developer and tinkerer based in Herndon, Virginia.
-          On the weekends I like to read (check out my <a
+          Software is my job and my hobby, and my work and personal projects
+          are listed below. On the weekends I like to read (check out my <a
           href="https://www.goodreads.com/user/show/52490059-miller-hall">
           goodreads</a>) and take walks with my wife and my dog. I'm
           originally from North Carolina, and I graduated from Clemson in
@@ -65,28 +66,24 @@
 
       <ul>
           <li>
-            <p>
-            <a href="https://github.com/arlindohall/rlox">
-                <code>rlox</code>
-            </a>: Work through the book
-            <a href="https://craftinginterpreters.com">Crafting Interpreters</a>
-            in Rust
-            </p>
+            <p><a href="https://github.com/arlindohall/rlox">
+            <code>rlox</code> </a>: Working through the book <a
+            href="https://craftinginterpreters.com">Crafting Interpreters</a>
+            in Rust</p>
           </li>
           <li>
-            <p>
-            <a href="/posts/website.html">This website</a>: Host updates and various static content
-            </p>
+            <p><a href="/posts/website.html">This website</a>: Using github
+            pages to host updates and various static content</p>
           </li>
           <li>
-            <p>
-            <a href="https://github.com/arlindohall/sicp">
-              <code>sicp</code>
-            </a>: Working through the examples in
-            <a href="https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html">
-                Structure and Interpretation of Computer Programs
-            </a>
-            </p>
+            <p><a href="https://github.com/arlindohall/advent.lua">Advent of
+            code in lua, one of my favorite programming languages</a></p>
+          </li>
+          <li>
+            <p><a href="https://github.com/arlindohall/sicp">
+            <code>sicp</code> </a>: Working through the examples in <a
+            href="https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html">
+            Structure and Interpretation of Computer Programs</a></p>
           </li>
       </ul>
 
