--- a/posts.html
+++ b/posts.html
@@ -20,15 +20,12 @@
         <h1>Posts</h1>
 
         <p>
-          This is a manually-updated list of posts I've written.
-          Some are marked as "Work in Progress" because I don't
-          feel like they're ready to see the light of day/to be
-          shared. However, I'm trying to learn in public, and I
-          think it's more important to share them than to have them
-          in perfect shape. Putting the "Work in Progress" message
-          at the top is my way of forgiving myself for their
-          imperfections until I'm more comfortable with the learn
-          in public style of doing things.
+          This is a list of posts I've written. I'm trying to learn in
+          public, and I think it's more important to share the posts than to
+          have them in perfect shape. Putting the "Work in Progress" message
+          at the top is my way of forgiving myself for their imperfections
+          until I'm more comfortable with the learn in public style of doing
+          things.
         </p>
 
         <h2>Post List</h2>
