Change lua paragraph to not be all link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </li>
           <li>
             <p><a href="https://github.com/arlindohall/advent.lua">Advent of
-            code in lua, one of my favorite programming languages</a></p>
+            code</a> in lua, one of my favorite programming languages</p>
           </li>
           <li>
             <p><a href="https://github.com/arlindohall/sicp">
