Clean up images on home page

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       </p>
 
       <img class="image-center"
-      src="/assets/dunning-kruger.jpg"
-      title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
-      alt="Dunning-kruger effect graph, from wikimedia commons">
+           src="/assets/dunning-kruger.jpg"
+           title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
+           alt="Dunning-kruger effect graph, from wikimedia commons">
       </img>
 
       <ul>
@@ -85,7 +85,11 @@
 
       </div>
 
-      <img class="index-personal-logo" src="/assets/logo.svg"></img>
+      <img class="index-personal-logo"
+           title="Personal logo"
+           alt="Personal website logo, a monogram of MAH, my initials"
+           src="/assets/logo.svg">
+      </img>
 
       <div class="footer">
       <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
