Copy image change to other pages

--- a/posts.html
+++ b/posts.html
@@ -46,7 +46,11 @@
 
       </div>
 
-      <img class="index-personal-logo" src="/assets/logo.svg"></img>
+      <img class="index-personal-logo"
+           title="Personal logo"
+           alt="Personal website logo, a monogram of MAH, my initials"
+           src="/assets/logo.svg">
+      </img>>
 
       <div class="footer">
         <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">GitHub</a></span>
