--- a/_template.html
+++ b/_template.html
@@ -19,7 +19,11 @@
       <div id="main" class="main">
       </div>
 
-      <img class="index-personal-logo" src="/assets/logo.svg"></img>
+      <img class="index-personal-logo"
+           title="Personal logo"
+           alt="Personal website logo, a monogram of MAH, my initials"
+           src="/assets/logo.svg">
+      </img>
 
       <div class="footer">
       <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/{page_path}">GitHub</a></span>
