Fix spacing on mobile and desktop

--- a/_template.html
+++ b/_template.html
@@ -17,6 +17,8 @@
       </div>
 
       <div id="main" class="main">
+      <div class="main-padding">
+      </div>
       </div>
 
       <img class="index-personal-logo"
