--- a/posts.html
+++ b/posts.html
@@ -17,6 +17,7 @@
       </span>
       </div>
       <div id="main" class="main">
+      <div class="main-padding">
         <h1>Posts</h1>
 
         <p>
@@ -44,6 +45,7 @@
           I have some blog posts at <a href="https://world.hey.com/hall">world.hey.com</a>
         </p>
 
+      </div>
       </div>
 
       <img class="index-personal-logo"
