--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
 
       <div id="main" class="main">
+      <div class="main-padding">
       <h1>
         Miller Hall
       </h1>
@@ -82,7 +83,7 @@
             Structure and Interpretation of Computer Programs</a></p>
           </li>
       </ul>
-
+      </div>
       </div>
 
       <img class="index-personal-logo"
