Typo in image footer

--- a/posts.html
+++ b/posts.html
@@ -52,7 +52,7 @@
            title="Personal logo"
            alt="Personal website logo, a monogram of MAH, my initials"
            src="/assets/logo.svg">
-      </img>>
+      </img>
 
       <div class="footer">
         <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">GitHub</a></span>
