Use margin instead of padding
https://stackoverflow.com/questions/2189452/when-to-use-margin-vs-padding-in-css

This is basically a way to make it easier to space things
because margin behaves more like what I expect when thinking about
bariers around boxes on a page.

--- a/_template.html
+++ b/_template.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id="main" class="main">
-      <div class="main-padding">
+      <div class="main-buffer">
       </div>
       </div>
 
