--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div id="main" class="main">
-      <div class="main-padding">
+      <div class="main-buffer">
       <h1>
         Miller Hall
       </h1>
