--- a/posts.html
+++ b/posts.html
@@ -17,7 +17,7 @@
       </span>
       </div>
       <div id="main" class="main">
-      <div class="main-padding">
+      <div class="main-buffer">
         <h1>Posts</h1>
 
         <p>
