Re-generate root pages from source

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"></meta>
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-    <title>Miller Hall</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Miller Hall</title>
+        <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
   <body>
     <div class="container">
@@ -18,84 +21,43 @@
       </div>
 
       <div id="main" class="main">
-      <div class="main-buffer">
-      <h1>
-        Miller Hall
-      </h1>
-
-      <p>
-          I am a software developer and tinkerer based in Herndon, Virginia.
-          Software is my job and my hobby, and my work and personal projects
-          are listed below. On the weekends I like to read (check out my <a
-          href="https://www.goodreads.com/user/show/52490059-miller-hall">
-          goodreads</a>) and take walks with my wife and my dog. I'm
-          originally from North Carolina, and I graduated from Clemson in
-          2016. I love all things Carolinas.
-      </p>
-
-      <h2>
-        Work
-      </h2>
-      <ul>
-        <li>
-          I have been an SDE at AWS in Arlington, Virginia since 2017
-        </li>
-        <li>
-          I spent three years on a team focused on software quality during
-          the region build process
-        </li>
-        <li>
-          I now work on building edge solutions custom-built to customer
-          needs
-        </li>
-      </ul>
-
-      <h2>
-        Projects
-      </h2>
-
-      <p>
-        I've given up on most of these, as I prefer the peak of the
-        dunning-kruger effect to the valleys.
-      </p>
-
-      <img class="image-center"
-           src="/assets/dunning-kruger.jpg"
-           title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
-           alt="Dunning-kruger effect graph, from wikimedia commons">
-      </img>
-
-      <ul>
-          <li>
-            <p><a href="https://github.com/arlindohall/rlox">
-            <code>rlox</code> </a>: Working through the book <a
-            href="https://craftinginterpreters.com">Crafting Interpreters</a>
-            in Rust</p>
-          </li>
-          <li>
-            <p><a href="https://github.com/arlindohall/advent.lua">Advent of
-            code</a> in lua, one of my favorite programming languages</p>
-          </li>
-          <li>
-            <p><a href="https://github.com/arlindohall/sicp">
-            <code>sicp</code> </a>: Working through the examples in <a
-            href="https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html">
-            Structure and Interpretation of Computer Programs</a></p>
-          </li>
-      </ul>
-      </div>
+        <div class="main-buffer">
+<!--
+  Indentation is messed up here because pandoc indents code blocks
+  if they are indented with the content.
+-->
+<h1 id="miller-hall">Miller Hall</h1>
+<p>I am a software developer and tinkerer based in Herndon, Virginia. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (check out my <a href="https://www.goodreads.com/user/show/52490059-miller-hall">goodreads</a>) and take walks with my wife and my dog. I’m originally from North Carolina, and I graduated from Clemson in 2016. I love all things Carolinas.</p>
+<h2 id="work">Work</h2>
+<ul>
+<li>I have been an SDE at AWS in Arlington, Virginia since 2017</li>
+<li>I spent three years on a team focused on software quality during the region build process</li>
+<li>I now work on building edge solutions custom-built to customer needs</li>
+</ul>
+<h2 id="projects">Projects</h2>
+<p>I’ve given up on most of these, as I prefer the peak of the dunning-kruger effect to the valleys.</p>
+<p><img class="image-center"
+    src="/assets/dunning-kruger.jpg"
+    title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
+    alt="Dunning-kruger effect graph, from wikimedia commons"> &lt;/img</p>
+<ul>
+<li><a href="https://github.com/arlindohall/rlox"><code>rlox</code></a> : Working through the book <a href="https://craftinginterpreters.com">Crafting Interpreters</a> in Rust</li>
+<li><a href="https://github.com/arlindohall/advent.lua">Advent of code</a> in lua, one of my favorite programming languages</li>
+<li><a href="https://github.com/arlindohall/sicp"><code>sicp</code></a> : Working through the examples in <a href="https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html">Structure and Interpretation of Computer Programs</a></li>
+</ul>
+        </div>
       </div>
 
       <img class="index-personal-logo"
-           title="Personal logo"
-           alt="Personal website logo, a monogram of MAH, my initials"
-           src="/assets/logo.svg">
+          title="Personal logo"
+          alt="Personal website logo, a monogram of MAH, my initials"
+          src="/assets/logo.svg">
       </img>
 
       <div class="footer">
-      <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
+        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
       </div>
     </div>
   </body>
-<!-- <link rel="stylesheet" href="/debug.css"></link> -->
+  <!-- <link rel="stylesheet" href="/debug.css"></link> -->
 </html>
