--- a/posts.html
+++ b/posts.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"></meta>
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-    <title>Posts: Miller Hall</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Posts - Miller Hall</title>
+        <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
   <body>
     <div class="container">
@@ -16,42 +19,28 @@
         <a href="https://twitter.com/arlindohall">twitter</a>
       </span>
       </div>
+
       <div id="main" class="main">
-      <div class="main-buffer">
-        <h1>Posts</h1>
-
-        <p>
-          This is a list of posts I've written. I'm trying to learn in
-          public, and I think it's more important to share the posts than to
-          have them in perfect shape. Putting the "Work in Progress" message
-          at the top is my way of forgiving myself for their imperfections
-          until I'm more comfortable with the learn in public style of doing
-          things.
-        </p>
-
-        <h2>Post List</h2>
-
-        <ul>
-          <li>
-            <a href="/posts/random-strings-in-bash.html">
-              Generating random data in fish(/bash/sh/zsh)
-            </a>
-          </li>
-        </ul>
-
-        <h2>Other Content</h2>
-
-        <p>
-          I have some blog posts at <a href="https://world.hey.com/hall">world.hey.com</a>
-        </p>
-
-      </div>
+        <div class="main-buffer">
+<!--
+  Indentation is messed up here because pandoc indents code blocks
+  if they are indented with the content.
+-->
+<h1 id="posts">Posts</h1>
+<p>This is a list of posts I've written. I'm trying to learn in public, and I think it's more important to share the posts than to have them in perfect shape. Putting the "Work in Progress" message at the top is my way of forgiving myself for their imperfections until I'm more comfortable with the learn in public style of doing things.</p>
+<h2 id="post-list">Post List</h2>
+<ul>
+<li><a href="/posts/random-strings-in-bash.html">Generating random data in fish(/bash/sh/zsh)</a></li>
+</ul>
+<h2 id="other-content">Other Content</h2>
+<p>I have some blog posts at <a href="https://world.hey.com/hall">world.hey.com</a></p>
+        </div>
       </div>
 
       <img class="index-personal-logo"
-           title="Personal logo"
-           alt="Personal website logo, a monogram of MAH, my initials"
-           src="/assets/logo.svg">
+          title="Personal logo"
+          alt="Personal website logo, a monogram of MAH, my initials"
+          src="/assets/logo.svg">
       </img>
 
       <div class="footer">
@@ -59,4 +48,5 @@
       </div>
     </div>
   </body>
+  <!-- <link rel="stylesheet" href="/debug.css"></link> -->
 </html>
