Fix missing closing bracket

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p><img class="image-center"
     src="/assets/dunning-kruger.jpg"
     title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
-    alt="Dunning-kruger effect graph, from wikimedia commons"> &lt;/img</p>
+    alt="Dunning-kruger effect graph, from wikimedia commons"> </img></p>
 <ul>
 <li><a href="https://github.com/arlindohall/rlox"><code>rlox</code></a> : Working through the book <a href="https://craftinginterpreters.com">Crafting Interpreters</a> in Rust</li>
 <li><a href="https://github.com/arlindohall/advent.lua">Advent of code</a> in lua, one of my favorite programming languages</li>
