Add descriptions to posts

--- a/_template.html
+++ b/_template.html
@@ -10,6 +10,7 @@
     <title>Miller Arlindo Hall</title>
     $endif$
     <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
+    <meta name="description" content="$title$: $description$"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
   <body>
