--- a/posts.html
+++ b/posts.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
         <title>Posts - Miller Hall</title>
         <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
+    <meta name="description" content="Posts - Miller Hall: "></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
   <body>
