Use real description for page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
         <title>Miller Hall</title>
+            <meta name="description" content="The home page of my personal website describes who I am, what I do, and some of my latest projects."></meta>
         <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
-    <meta name="description" content="Miller Hall: "></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
   <body>
