--- a/_template.html
+++ b/_template.html
@@ -9,8 +9,14 @@
     $else$
     <title>Miller Arlindo Hall</title>
     $endif$
+    $if(description)$
+    <meta name="description" content="$description$"></meta>
+    $elseif(title)$
+    <meta name="description" content="$title$"></meta>
+    $else$
+    <meta name="description" content=$outputfile$></meta>
+    $endif$
     <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
-    <meta name="description" content="$title$: $description$"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
   <body>
