--- a/posts.html
+++ b/posts.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
         <title>Posts - Miller Hall</title>
-            <meta name="description" content="Posts - Miller Hall"></meta>
+            <meta name="description" content="A list of posts I’ve written"></meta>
         <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
