Don't escape quotes in source

--- a/posts.html
+++ b/posts.html
@@ -28,7 +28,7 @@
   if they are indented with the content.
 -->
 <h1 id="posts">Posts</h1>
-<p>This is a list of posts I've written. I'm trying to learn in public, and I think it's more important to share the posts than to have them in perfect shape. Putting the "Work in Progress" message at the top is my way of forgiving myself for their imperfections until I'm more comfortable with the learn in public style of doing things.</p>
+<p>This is a list of posts I’ve written. I’m trying to learn in public, and I think it’s more important to share the posts than to have them in perfect shape. Putting the ‘Work in Progress’ message at the top is my way of forgiving myself for their imperfections until I’m more comfortable with the learn in public style of doing things.</p>
 <h2 id="post-list">Post List</h2>
 <ul>
 <li><a href="/posts/random-strings-in-bash.html">Generating random data in fish(/bash/sh/zsh)</a></li>
