Link to both markdown and html source

--- a/_template.html
+++ b/_template.html
@@ -48,7 +48,10 @@ $body$
       </img>
 
       <div class="footer">
-        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/$outputfile$">GitHub</a></span>
+        <span>Page source on GitHub:
+          (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/$outputfile$">html</a>,
+          <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/$sourcefile$">md</a>)
+        </span>
       </div>
     </div>
   </body>
