--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
       </img>
 
       <div class="footer">
-        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">GitHub</a></span>
+        <span>Page source on GitHub:
+          (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">html</a>,
+          <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/index.md">md</a>)
+        </span>
       </div>
     </div>
   </body>
