--- a/posts.html
+++ b/posts.html
@@ -45,7 +45,10 @@
       </img>
 
       <div class="footer">
-        <span>Page source on <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">GitHub</a></span>
+        <span>Page source on GitHub:
+          (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">html</a>,
+          <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/posts.md">md</a>)
+        </span>
       </div>
     </div>
   </body>
